--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Comprehensive Guide to Roof Repair Services in Albuquerque NM</title>
   <meta name="description" content="Searching for roof repair services in Albuquerque NM? Discover how timely repairs can protect your home and extend your roof's lifespan.">
-  <link rel="canonical" href="https://vshop-iota.vercel.app">
+  <link rel="canonical" href="https://roofingcompany.vercel.app">
 <meta name="robots" content="index,follow">
   
   
@@ -68,7 +68,7 @@
 <div style="text-align: center;">
 <img src="https://i.postimg.cc/T1Fks34M/1-6.jpg" alt="roof.jpg" style="max-width: 100%; height: auto;">
   
-<h2><a href="https://alex-payne1.gitlab.io/quality/">Do Vapes Have Calories?</a></h2>
+<h2><a href="https://roofingcompany.netlify.app/">The Importance of Regular Roof Inspections: Find the Best Roof Inspection Near Me</a></h2>
 
 </div>
 
