--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Searching for roof repair services in Albuquerque NM? Discover how timely repairs can protect your home and extend your roof's lifespan.">
   <link rel="canonical" href="https://roofingcompany.vercel.app">
 <meta name="robots" content="index,follow">
+  <meta name="google-site-verification" content="umiYfZMOvhMOOHXJiCqqCIv_lzuVCHyQB30ae9D13rA" />
   
   
   <style>
